adds reset button for hair appointment

--- a/index.html
+++ b/index.html
@@ -25,80 +25,115 @@
                 <input
                 type="checkbox"
                 id="olives"
-                >
+                />
             </div>
             <div>
                 <p>Tomato</p>
                 <input
                 type="checkbox"
                 id="tomato"
-                >
+                />
             </div>
             <div>
                 <p>Romaine Lettuce</p>
                 <input
                 type="checkbox"
                 id="romaine_lettuce"
-                >
+                />
             </div>
             <div>
                 <p>Mustard</p>
                 <input
                 type="checkbox"
                 id="mustard"
-                >
+                />
             </div>
             <div>
                 <p>Pickles</p>
                 <input
                 type="checkbox"
                 id="pickles"
-                >
+                />
             </div>
             <div>
                 <p>Cheddar Cheese</p>
                 <input
                 type="checkbox"
                 id="cheddar_cheese"
-                >
+                />
             </div>
             <div>
                 <p>Avocado</p>
                 <input
                 type="checkbox"
                 id="avocado"
-                >
+                />
             </div>
             <div>
                 <p>Mayonnaise</p>
                 <input
                 type="checkbox"
                 id="mayonnaise"
-                >
+                />
             </div>
             <div>
                 <p>Bacon</p>
                 <input
                 type="checkbox"
                 id="bacon"
-                >
+                />
             </div>
             <div>
                 <p>Arugula</p>
                 <input
                 type="checkbox"
                 id="arugula"
-                >
+                />
             </div>
             <div>
                 <input 
                 type="submit"
                 id="sandwich_submit"
-                >
+                />
             </div>
         </form>
     </div>
-
+    <div class="container3">
+        <form>
+            <h1 >Haircut Appointment Date</h1>
+            <input
+            type="date"
+            id="date"
+            />
+            <p>Hairstylist</p>
+            <input
+            id="stylist"
+            type="text"
+            placeholder="Stylist Name"
+            />
+            <p>Long Hair</p>
+            <input
+            id="long"
+            type="radio"
+            />
+            <p>Short Hair</p>
+            <input
+            id="short"
+            type="radio"
+            />
+            <div>
+            <input 
+            type="submit"
+            id="haircut_submit"
+            />
+            <button
+            id="reset" 
+            type="reset" 
+            value="Reset">Reset Date
+            </button>
+        </div>
+        </form>
+    </div>
 </body>
 <script src="./main.js"></script>
 
